--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h2 class="section-title neon-text-primary">Get in Touch</h2>
             <div class="contact-info">
                 <a href="mailto:jimmymagdy07@gmail.com">
-                    <i class="fas fa-envelope neon-icon"></i> jimmymagdy07@gmail.com
+                    <i class="fas fa-envelope neon-icon"></i> jimmymagdymagdy@gmail.com
                 </a>
                 <a href="tel:+201065569629">
                     <i class="fas fa-phone neon-icon"></i> +20 106 556 9629
